--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
         <url>http://192.168.0.126:8081/repository/local-releases</url>
     </repository>
 	<repository>
-        <id>acme-nexus-releases</id>
+        <id>nexus</id>
         <name>acme nexus</name>
         <url>http://192.168.0.126:8081/repository/local-releases/</url>
        </repository>
