--- a/pom.xml
+++ b/pom.xml
@@ -117,14 +117,14 @@
 	</build>
 
 <distributionManagement>
-    <repository>
+    <!-- <repository>
         <id>maven-releases</id>
         <url>http://192.168.0.126:8081/repository/local-releases/</url>
     </repository>
     <snapshotRepository>
         <id>maven-snapshots</id>
         <url>http://192.168.0.126:8081/repository/local-snapshots/</url>
-    </snapshotRepository>
+    </snapshotRepository> -->
 	
 </distributionManagement>
 </project>
