--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
@@ -117,7 +122,7 @@
 	</build>
 
 <distributionManagement>
-    <repository>
+    <!-- <repository>
         <id>nexus</id>
 		<name>local-releases</name>
         <url>http://192.168.0.126:8081/repository/local-releases/</url>
@@ -125,7 +130,7 @@
     <snapshotRepository>
         <id>nexus</id>
         <url>http://192.168.0.126:8081/repository/local-snapshots/</url>
-    </snapshotRepository>
+    </snapshotRepository> -->
 	
 </distributionManagement>
 </project>
