--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
 	</build>
 
 <distributionManagement>
+   <repository>
+        <id>nexus</id>
+        
+        <url>http://192.168.0.125:8081</url>
+    </repository>
     <!-- <repository>
         <id>nexus</id>
 		<name>local-releases</name>
